# Email-Triage-OpenEnv-Environment

./: Dockerfile  README.md  inference.py  openenv.yaml  pyproject.toml  requirements.txt
data/: emails.json
env/: environment.py  grader.py  models.py  tasks.py
server/: app.py
