[project]
name = "email-env"
version = "0.1.0"
description = "Email classification OpenEnv environment"
authors = [
    { name="Bharat Kumar Gope" }
]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "pydantic",
    "openai",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"